--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "tailwindcss-fluid-type": "^2.0.7"
   },
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build --sourcemap",
     "serve": "vite preview"
   },
